# pjchen3.github.io

./: index.html  publications.html  showcase.html
assets/css/: global.css
cv/: index.html
publications/: index.html
research/: index.html
research-wordcloud/: README.md  config.example.yaml  pyproject.toml  topic_overrides.example.yaml
research-wordcloud/examples/: make_synthetic_papers.py
research-wordcloud/research_cloud/: aggregation.py  cache.py  cli.py  config.py  html_renderer.py  llm_extractor.py  metadata.py  models.py  normalization.py  pdf_parser.py  pipeline.py  report.py  section_detector.py  svg_renderer.py  topic_extractor.py  weighting.py  wordcloud_renderer.py
research-wordcloud/research_cloud/templates/: report.html.j2  wordcloud.html.j2
research-wordcloud/tests/: conftest.py  test_end_to_end.py  test_normalization.py  test_pdf_parser.py  test_weighting.py
