[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "research-wordcloud"
version = "0.1.0"
description = "Semantic, paper-traceable research topic clouds from academic PDFs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Research Cloud contributors"}]
dependencies = [
  "PyMuPDF>=1.24",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "scikit-learn>=1.5",
  "wordcloud>=1.9",
  "matplotlib>=3.8",
  "Jinja2>=3.1",
  "Pillow>=10.4",
]

[project.optional-dependencies]
test = ["pytest>=8.2", "reportlab>=4.2"]
ocr = ["pytesseract>=0.3.13"]

[project.scripts]
research-cloud = "research_cloud.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["research_cloud"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
